[pom] Remove obsolete jdk.attach.allowAttachSelf that was used by jmockit incorrectly
jmockit no longer supports this now that it was remedicated.